# BluControl-ESP32

./: .gitignore  .gitmodules  README.md  build_update.sh  deploy_full.config.example.sh  deploy_full.sh  partitions.csv
.github/workflows/: build.yml
blu-common/blu-components/: CMakeLists.txt  Kconfig  blu-analogs.c  blu-energy.c  blu-hardware.c
blu-common/blu-components/include/: blu-analogs.h  blu-energy.h  blu-hardware.h
blu-common/blu-components/include/sticks/: blu-analog-pad.h  blu-buttons-pad.h  blun64-pad.h
blu-common/blu-components/include/triggers/: blu-analog-triggers.h
blu-common/blu-components/sticks/: blu-analog-pad.c  blu-buttons-pad.c  blun64-pad.c
blu-common/blu-components/triggers/: blu-analog-triggers.c
blu-generic/: CMakeLists.txt  base.sdkconfig  sdkconfig  sdkconfig.defaults
blu-generic/main/: Kconfig  main.cpp  main.h
blu-hid/: CMakeLists.txt  _sdkconfig  base.sdkconfig  teste.sh
blu-hid/main/: Kconfig  main.cpp
blu-ota/: CMakeLists.txt  base.sdkconfig  sdkconfig  sdkconfig.defaults
blu-ota/html/: .gitignore  build.js  package.json
blu-ota/html/src/: index.html
blu-ota/html/src/css/: main.css
blu-ota/html/src/js/: main.js
blu-ota/main/: CMakeLists.txt  Kconfig  main.c  main.h  ota_updater.c  ota_updater.h
blu-switch/: CMakeLists.txt  _sdkconfig  base.sdkconfig  sdkconfig  sdkconfig.defaults  sdkconfig.txt
blu-switch/components/hoja-baseband/: CMakeLists.txt  baseband_bridge.c
blu-switch/components/hoja-baseband/include/: baseband_api.h
blu-switch/main/: CMakeLists.txt  Kconfig  main.c  main.h
build_final/: blucontrol-HID.upd  blucontrol-generic.upd  blucontrol-switch.upd  blucontrol.updpkg
configs/: gamecube.sdkconfig  n64-yakara.sdkconfig  n64.sdkconfig  nes.sdkconfig  psx_ps2.sdkconfig  snes.sdkconfig  universal.sdkconfig
configs/gamecube/: README.md
scripts/: build_all.sh  flash_monitor.sh  merge_firmware.sh
